<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

<android.support.v7.widget.Toolbar
android:id="@+id/my_toolbar"
android:layout_width="match_parent"
android:layout_height="?attr/actionBarSize"
android:background="?attr/colorPrimary"
android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FlatDiagonalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/green1"
        android:padding="2dp">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/Masa"
            android:textColorHint="@color/secondary_text"
            android:gravity="end"
            android:paddingRight="5dp"
            android:id="@+id/et1"
            android:inputType="numberDecimal"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/force"
            android:textColorHint="@color/secondary_text"
            android:gravity="end"
            android:paddingRight="5dp"
            android:id="@+id/et2"
            android:inputType="numberDecimal"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/angle"
            android:textColorHint="@color/secondary_text"
            android:gravity="end"
            android:paddingRight="5dp"
            android:id="@+id/et3"
            android:inputType="numberDecimal"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/Mu"
            android:textColorHint="@color/secondary_text"
            android:gravity="end"
            android:paddingRight="5dp"
            android:id="@+id/et4"
            android:inputType="numberDecimal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/green2"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:paddingLeft="@dimen/dimens_3"
                android:text="@string/rFuerzaX"
                android:textStyle="bold"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:paddingLeft="@dimen/dimens_3"
                android:text="@string/rFuerzaY"
                android:textStyle="bold"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:paddingLeft="@dimen/dimens_3"
                android:text="@string/peso"
                android:textStyle="bold"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:paddingLeft="@dimen/dimens_3"
                android:text="@string/normal"
                android:textStyle="bold"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:paddingLeft="@dimen/dimens_3"
                android:text="@string/fricci_n"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:paddingLeft="@dimen/dimens_3"
                android:text="@string/aceleraci_n"
                android:textStyle="bold"
                android:textSize="25sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultXF"
                android:textSize="25sp"
                android:paddingRight="@dimen/dimens_3"
                android:layout_margin="3dp"
                android:gravity="end"
                android:id="@+id/tvx"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultXF"
                android:textSize="25sp"
                android:paddingRight="@dimen/dimens_3"
                android:layout_margin="3dp"
                android:gravity="end"
                android:id="@+id/tvy"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultPeso"
                android:textSize="25sp"
                android:paddingRight="@dimen/dimens_3"
                android:layout_margin="3dp"
                android:gravity="end"
                android:id="@+id/tva"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultNormal"
                android:textSize="25sp"
                android:paddingRight="@dimen/dimens_3"
                android:layout_margin="3dp"
                android:gravity="end"
                android:id="@+id/tvb"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultFriccion"
                android:textSize="25sp"
                android:paddingRight="@dimen/dimens_3"
                android:layout_margin="3dp"
                android:gravity="end"
                android:id="@+id/tvc"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultAceleracion"
                android:paddingRight="@dimen/dimens_3"
                android:layout_margin="3dp"
                android:textSize="25sp"
                android:gravity="end"
                android:id="@+id/tvd"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resolver"
        android:padding="8dp"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:id="@+id/bt1"
        android:background="@drawable/green3"/>

</LinearLayout>

</LinearLayout>