<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

<android.support.v7.widget.Toolbar
android:id="@+id/my_toolbar"
android:layout_width="match_parent"
android:layout_height="?attr/actionBarSize"
android:background="?attr/colorPrimary"
android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
    />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:onClick="onClick">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        android:background="@drawable/green1">

            <EditText
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/et1"
                android:paddingRight="5dp"
                android:hint="@string/Masa"
                android:textColorHint="@color/secondary_text"
                android:inputType="numberDecimal"
                android:gravity="end"
                android:layout_width="match_parent"
                android:textColor="@color/primary_text"/>

            <EditText
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/et2"
                android:hint="@string/FuerzaY"
                android:textColorHint="@color/secondary_text"
                android:paddingRight="5dp"
                android:gravity="end"
                android:inputType="numberDecimal|numberSigned"
                android:layout_width="match_parent"
                android:textColor="@color/primary_text"/>

            <EditText
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/et3"
                android:hint="@string/FuerzaX"
                android:textColorHint="#777777"
                android:paddingRight="5dp"
                android:gravity="end"
                android:layout_width="match_parent"
                android:inputType="numberDecimal|numberSigned"/>

            <EditText
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/et4"
                android:hint="@string/Mu"
                android:textColorHint="#777777"
                android:paddingRight="5dp"
                android:gravity="end"
                android:layout_width="match_parent"
                android:inputType="numberDecimal" />

    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/green2"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="@dimen/dimens_5"
        android:paddingRight="@dimen/dimens_5">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/peso"
                android:textStyle="bold"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/normal"
                android:textStyle="bold"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/fricci_n"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/aceleraci_n"
                android:textStyle="bold"
                android:textSize="25sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultPeso"
                android:textSize="25sp"
                android:layout_margin="3dp"
                android:gravity="end"
                android:id="@+id/tva"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultNormal"
                android:textSize="25sp"
                android:layout_margin="3dp"
                android:gravity="end"
                android:id="@+id/tvb"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultFriccion"
                android:textSize="25sp"
                android:layout_margin="3dp"
                android:gravity="end"
                android:id="@+id/tvc"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultAceleracion"
                android:layout_margin="3dp"
                android:textSize="25sp"
                android:gravity="end"
                android:id="@+id/tvd"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resolver"
        android:textColor="@color/icons"
        android:padding="8dp"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:elevation="4dp"
        android:onClick="onClick"
        android:id="@+id/bt1"
        android:background="@drawable/green3"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimens_4"
        android:text="Considerar la dirección de las fuerzas"
        android:textSize="15sp"
        android:textColor="@color/secondary_text"
        android:gravity="center|top"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimens_3"
        android:text="Tocar doble el punto para poner un menos"
        android:textSize="15sp"
        android:textColor="@color/secondary_text"
        android:gravity="center|top"/>

</LinearLayout>
</LinearLayout>