<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimens_5"
            android:text="@string/rampStyle"
            android:textColor="@color/primary_text"
            android:textSize="25sp"
            android:gravity="center"
            android:clickable="false" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"/>

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/dimens_5"
            android:background="@drawable/triangle1"
            android:clickable="true"
            android:onClick="onClick"
            android:id="@+id/ib1"
            android:layout_gravity="center"
            android:contentDescription="@string/triangle1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"/>

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/dimens_5"
            android:background="@drawable/triangle2"
            android:clickable="true"
            android:onClick="onClick"
            android:id="@+id/ib2"
            android:layout_gravity="center"
            android:contentDescription="@string/triangle2" />

    </LinearLayout>
</LinearLayout>
